<resources>

	<string name="app_name">Grid</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<string name="pre_game_start">Start Game</string>
	<string name="pre_game_start_level">Start %s</string>
	<string name="pre_game_all_levels">All Levels</string>
	<string name="pre_game_badges">Badges</string>
	<string name="pre_game_help">Help</string>

	<string name="level_select_title">Select Level:</string>
	<string name="level_select_stage">Stage %d</string>
	<string name="level_select_stage_tutorial">Stage %d - Tutorial</string>
	<string name="level_select_sub_stage">%d</string>

	<string name="stat_progress_title">Progress</string>
	<string name="stat_time_title">Time</string>
	<string name="stat_flips_title">Flips</string>

	<string name="stat_level_value_format">%1$02d - %2$03d</string>
	<string name="stat_progress_value_format">%1$d / %2$d</string>
	<string name="stat_time_value_format">%1$02d:%2$02d</string>
	<string name="stat_flips_value_format">%d</string>

	<string name="stat_level_default">00 – 000</string>
	<string name="stat_progress_default">00 / 00</string>
	<string name="stat_time_default">00:00</string>
	<string name="stat_flips_default">0</string>

	<string name="paused_title">Paused</string>
	<string name="paused_resume">Resume</string>
	<string name="paused_quit">Quit</string>

	<string-array name="win_titles">
		<item>You Win!</item>
		<item>Awesome!</item>
		<item>Sweet!</item>
		<item>Well Done!</item>
		<item>Congratulations!</item>
		<item>Great Job!</item>
		<item>Nice One!</item>
	</string-array>
	<string name="win_next">Next Level</string>
	<string name="win_quit">Quit</string>

</resources>
