<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_vertical"
		android:padding="@dimen/space_small"
		>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/space_small"
			>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:text="@string/stat_level_title"
				style="@style/game_stat_title"
				/>

		<TextView
				android:id="@+id/stat_level"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:text="@string/stat_level_default"
				style="@style/game_stat_value"
				/>

	</RelativeLayout>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/space_small"
			>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:text="@string/stat_progress_title"
				style="@style/game_stat_title"
				/>

		<TextView
				android:id="@+id/stat_progress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:text="@string/stat_progress_default"
				style="@style/game_stat_value"
				/>

	</RelativeLayout>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/space_small"
			>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:text="@string/stat_time_title"
				style="@style/game_stat_title"
				/>

		<TextView
				android:id="@+id/stat_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:text="@string/stat_time_default"
				style="@style/game_stat_value"
				/>

	</RelativeLayout>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:text="@string/stat_flips_title"
				style="@style/game_stat_title"
				/>

		<TextView
				android:id="@+id/stat_flips"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:text="@string/stat_flips_default"
				style="@style/game_stat_value"
				/>

	</RelativeLayout>

</LinearLayout>
