<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:background="#aa000000"
		>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/space_medium"
			android:text="@string/paused_title"
			style="@style/overlay_title"
			/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="2"
			android:baselineAligned="false"
			>

		<LinearLayout
				android:id="@+id/btn_pause_resume"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				style="@style/large_button_wrapper"
				>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/space_nano"
					android:src="@drawable/ic_play_arrow_white_48dp"
					android:contentDescription="@string/paused_resume"
					style="@style/large_button_icon"
					/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/paused_resume"
					style="@style/large_button_label"
					/>

		</LinearLayout>

		<LinearLayout
				android:id="@+id/btn_pause_quit"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				style="@style/large_button_wrapper"
				>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/space_nano"
					android:src="@drawable/ic_close_white_48dp"
					android:contentDescription="@string/paused_quit"
					style="@style/large_button_icon"
					/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/paused_quit"
					style="@style/large_button_label"
					/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>
