<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context="uk.co.markormesher.grid.PreGameActivity"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_game"
		>

	<TextView
			android:id="@+id/game_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:layout_marginTop="@dimen/space_large"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			style="@style/pre_game_title"
			/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/game_title"
			android:layout_above="@+id/navigation_wrapper"
			android:padding="@dimen/space_large"
			android:gravity="center"
			android:orientation="horizontal"
			>

		<uk.co.markormesher.grid.ui.GameBoard
				android:id="@+id/game_board"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				/>

	</LinearLayout>

	<LinearLayout
			android:id="@id/navigation_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_alignParentBottom="true"
			>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="2"
				android:baselineAligned="false"
				>

			<LinearLayout
					android:id="@+id/btn_start_game"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					style="@style/large_button_wrapper"
					>

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/space_nano"
						android:src="@drawable/ic_play_arrow_white_48dp"
						android:contentDescription="@string/pre_game_start"
						style="@style/large_button_icon"
						/>

				<TextView
						android:id="@+id/btn_start_game_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/pre_game_start"
						style="@style/large_button_label"
						/>

			</LinearLayout>

			<LinearLayout
					android:id="@+id/btn_all_levels"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					style="@style/large_button_wrapper"
					>

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/space_nano"
						android:src="@drawable/ic_list_white_48dp"
						android:contentDescription="@string/pre_game_all_levels"
						style="@style/large_button_icon"
						/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/pre_game_all_levels"
						style="@style/large_button_label"
						/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="2"
				android:baselineAligned="false"
				>

			<LinearLayout
					android:id="@+id/btn_badges"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					style="@style/large_button_wrapper"
					>

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/space_nano"
						android:src="@drawable/ic_star_white_48dp"
						android:contentDescription="@string/pre_game_badges"
						style="@style/large_button_icon"
						/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/pre_game_badges"
						style="@style/large_button_label"
						/>

			</LinearLayout>

			<LinearLayout
					android:id="@+id/btn_help"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					style="@style/large_button_wrapper"
					>

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/space_nano"
						android:src="@drawable/ic_help_outline_white_48dp"
						android:contentDescription="@string/pre_game_help"
						style="@style/large_button_icon"
						/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/pre_game_help"
						style="@style/large_button_label"
						/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<uk.co.markormesher.grid.ui.GameBoard
			android:id="@id/game_board"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentBottom="true"
			android:layout_margin="@dimen/game_cell_padding"
			android:visibility="gone"
			/>

</RelativeLayout>
